kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-example
  namespace: fastapi-example
spec:
  selector:
    app: fastapi-example
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
