kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: fastapi.mikel.apps.deustotech.eu
  namespace: fastapi-example
spec:
  rules:
  - host: fastapi.mikel.apps.deustotech.eu
    http:
      paths:
      - backend:
          serviceName: fastapi-example
          servicePort: 8000
  tls:
  - hosts:
    - fastapi.mikel.apps.deustotech.eu
    secretName: fastapi-mikel-apps-deustotech-eu-cert
